# guardclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  copy_test.jsonl  pyproject.toml  run_concurrent_verify.py  test_gc_brutal.py
.github/workflows/: guardclaw-verify.yml
.test_ledger/: ledger.jsonl
benchmarks/: bench_1m.py  verify_1m.py
case.gcbundle/: ledger.gef  manifest.json  public_key.json  verification.json
config/: example-policy.yaml  simple-policy.yaml
cross_lang_proof/: emit_proof.py  go.mod  proof_bundle.json  run_proof.ps1  verify_proof.go
docs/: ACCOUNTABILITY_LAG.md  DEPLOYMENT_GUIDE.md  DEV_MODE_vs_PROD_MODE.md  GEF-SPEC-v1.0.md  GEF-SPEC-v1.1-draft.md  GENESIS_LOSS_AND_RECOVERY.md  GHOST_VS_STRICT.md  OBSERVER_MODEL.md  OPERATIONAL_RUNBOOK.md  PERFORMANCE_BENCHMARKS.md  PROTOCOL.md  SCOPE_OF_TRUTH.md  replay-bound-evidence-v1.0.md
docs/phase1/: README.md
docs/phase2/: PHASE2_COMPLETE.md  README.md
docs/phase3/: PHASE3_PROTOCOL.md
examples/: action_request.json  basic_usage.py  execution_receipt.json  langchain_demo.py  mcp_proxy_demo.py  production_setup.py
guardclaw/: __init__.py  __main__.py  api.py  cli.py  compat.py  pytest_plugin.py  trace.py
guardclaw/adapters/: __init__.py  crewai.py  generic_agent.py  langchain.py  tool_wrapper.py
guardclaw/bundle/: __init__.py  exporter.py  models.py  report.py
guardclaw/cli/: __init__.py  export.py  export_html.py  main.py  replay.py  verify.py
guardclaw/core/: __init__.py  action_types.py  canonical.py  causality.py  crypto.py  emitter.py  exceptions.py  failure.py  genesis.py  ledger.py  liveness.py  models.py  modes.py  observers.py  proofs.py  replay.py  requests.py  summary.py  time.py  verification.py  wrapper.py
guardclaw/demos/: __init__.py  dangerous_actions.py  file_operations.py
guardclaw/integrations/: __init__.py  langchain.py
guardclaw/ledger/: __init__.py  ledger.py
guardclaw/mcp/: __init__.py  proxy.py
guardclaw/policy/: __init__.py  policy.py  rules.py
guardclaw/runtime/: __init__.py  context.py  executor.py
guardclaw/settlement/: __init__.py  engine.py
guardclaw/verification/: __init__.py  verifier.py  verify.py  verify_authority.py
hn_demo/: ledger.jsonl
keys/: agent-001.key  root.key
ledger/: genesis.json
ledger/agents/: agent-001.json
ledger/production.jsonl/: ledger.jsonl
ledger_brutal/: ledger.jsonl
scripts/: verify_phase2.py
stress_verify_output/: concurrent_verify_report.json
tests/: export_batch_sim.py  test_adversarial.py  test_concurrency.py  test_export_bundle.py  test_export_bundle_cli_output.py  test_export_bundle_hard.py  test_gef_invariants.py  test_gef_scale.py  test_recovery.py  test_safe_append.py  test_stress_1m.py
tests/helpers/: receipt_generator.py
