[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardclaw"
version = "0.2.0"
description = "Cryptographic evidence ledger for autonomous agent accountability"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    { name = "Viru Swami", email = "viruswami5511@gmail.com" }
]
keywords = [
    "ai", "agents", "cryptography", "audit",
    "ledger", "accountability", "replay-protection",
    "verification", "gef", "evidence-format"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "cryptography>=41.0.0",
    "jcs>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/viruswami5511/guardclaw"
Homepage = "https://github.com/viruswami5511/guardclaw"
Documentation = "https://github.com/viruswami5511/guardclaw/blob/master/docs/GEF-SPEC-v1.0.md"

[project.scripts]
guardclaw = "guardclaw.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["guardclaw*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
