[project]
name = "guardclaw"
version = "0.7.1"
description = "Cryptographic execution evidence for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Viru Swami", email = "viruswami5511@gmail.com" }
]
dependencies = [
    "cryptography>=41.0.0",
    "jcs>=0.2.0",
    "click>=8.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/viruswami5511/guardclaw"
Documentation = "https://github.com/viruswami5511/guardclaw#readme"
Repository = "https://github.com/viruswami5511/guardclaw"
Changelog = "https://github.com/viruswami5511/guardclaw/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
guardclaw = "guardclaw.cli:cli"

[project.entry-points."pytest11"]
guardclaw = "guardclaw.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["guardclaw*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
timeout = 0
addopts = "-v"
markers = [
    "critical: must pass before release",
    "hard: security gap, fix before launch",
    "medium: UX gap, fix if time permits",
    "slow: stress tests that run for a long time",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
